--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "d:\\HTML Project\\Nov 15\\Group4_Project_1\\AboutUs_Project\\Project Main\\index.html"
+    "livePreview.defaultPreviewPath": "d:\\HTML Project\\Nov 15\\Jan_9\\index.html"
 }
